--- a/crime in LA county.ipynb
+++ b/crime in LA county.ipynb
@@ -2094,59 +2094,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_variance(sample):\n",
-    "    sample_mean = np.mean(sample)\n",
-    "    return np.sum((sample - sample_mean)**2)/(len(sample)-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pooled_variance(sample1, sample2):\n",
-    "    n1, n2 = len(sample1), len(sample2)\n",
-    "    var_1, var_2 = sample_variance(sample1), sample_variance(sample2)\n",
-    "    return (((n1-1)*var_1)+((n2-1)*var_2))/((n1 + n2) - 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def twosample_tstatistic(expr, ctrl):\n",
-    "    expr_mean, ctrl_mean = np.mean(expr), np.mean(ctrl)\n",
-    "    numerator = expr_mean - ctrl_mean\n",
-    "    pool_var = pooled_variance(expr, ctrl)\n",
-    "    n_e, n_c = len(expr), len(ctrl)\n",
-    "    num = expr_mean-ctrl_mean\n",
-    "    den = np.sqrt(pool_var*((1/n_e)+(1/n_c)))\n",
-    "    return num/den\n",
-    "\n",
-    "t_stat = twosample_tstatistic(males, females)\n",
-    "t_stat"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 185,
    "metadata": {
     "collapsed": true,
@@ -9736,6 +9683,38 @@
     "                                          mean2 = mean2, std2 = std2, nobs2 = nobs, \n",
     "                                          equal_var = False)\n",
     "bot_ff_crime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 680,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 0.188248\n",
+      "Confidence Interval 95%: 0.130615, 0.245882\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.integrate import simps\n",
+    "from scipy.stats import t\n",
+    "\n",
+    "import math\n",
+    "#confidence interval og group over 1million\n",
+    "mean = combined_table['percentage'].mean()\n",
+    "    # evaluate sample variance by setting delta degrees of freedom (ddof) to\n",
+    "    # 1. The degree used in calculations is N - ddof\n",
+    "stddev = combined_table['percentage'].std()\n",
+    "    # Get the endpoints of the range that contains 95% of the distribution\n",
+    "t_bounds = t.interval(0.95, 7)\n",
+    "    # sum mean to the confidence interval\n",
+    "ci = [mean + critical * stddev / sqrt(8) for critical in t_bounds]\n",
+    "print('Mean: %f' % mean)\n",
+    "print('Confidence Interval 95%%: %f, %f' % (ci[0], ci[1]))"
    ]
   },
   {
